Build Time:  BUILDTIME

CHANGELOG
=================================================

= 2.1.2 =
-------------------------------------------------
* Improved: Show instructor feedback on student workbook frontend.
* Improved: Add ability to define certificate logo.
* Fixed: Prevent access modules when previous required modules haven't been completed.
* Fixed: Problem with TinyMCE.
* CoursePress Theme: Improved bbPress compatibility.
* CoursePress Theme: Fixed expanded unit list view mode.
* CoursePress Theme: Fixed display of HTML Bullet points.

= 2.1.1 =
-------------------------------------------------
* Improved: Added `editor-rtl.css` file.
* Improved: Better display responsive video.
* Improved: HTML login & signup forms.
* Improved: Username sanitization.
* Fixed: Assessments feedback sending problem.
* Fixed: Compatibility with older PHP versions.
* Fixed: CoursePress shortcode links are not working.
* Fixed: Even the Discussion module is not "Required", you can't go to next section.
* Fixed: Instructors capabilities problem on multisite installation.
* Fixed: Instructor can't reply to comments on course unit.
* Fixed: Missing translation in steps 6 & 7.
* Fixed: Problems with missing passcode after login.
* Fixed: Problems with PHP 5.2.x.
* Fixed: Problem to go next unit when all answers are required but current unit do not have any assessable modules.
* Fixed: Problem with go  to next module.
* Fixed: Problem with non assessable modules and grade unit.
* Fixed: Problem with yimer on quiz module after we use "Try Again" button.
* Fixed: Sections on units page overview are not linked and not visible.
* Fixed: Show and Free Preview options in Course Structure settings.
* Fixed: Small issues with PHP 7.1.1
* Fixed: The title of "Course Structure" widget should not be visible, when it is not checked.
* Fixed: Unable to send feedback about assessments.
* Fixed: Units inside the course are available agains the settings options.